--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ main {
   justify-content: center;
   animation-name: shape;
   animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes shape {
